package com.see.asus.sa3ed3amer;

import android.os.Bundle;
import android.support.v7.app.AppCompatActivity;
import android.view.View;
import android.widget.Button;
import android.widget.TextView;

public class FileConversionTool extends AppCompatActivity {
    Button add;
    Button play;
    TextView name;
    Getmp4files mp4;
    Getmp3files mp3;
    Getwavfiles wav;


    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_file_conversion_tool);
    }

    public void Transmission() {
    }

    public void btn_add(View view) {
    }

    public void btn_play(View view) {
    }

}
