package com.see.asus.sa3ed3amer;

import java.util.ArrayList;

public class SavedItems {
    String name;
    ArrayList<Integer> savedarray;

    public SavedItems(String name, ArrayList<Integer> savedarray) {
        this.name = name;
        this.savedarray = savedarray;
    }
}
