package com.see.asus.sa3ed3amer;

public class mediainfo {
    String Path;
    String Name;
    String Artist;
    String Album;

    public mediainfo(String path, String name, String artist, String album) {
        Path = path;
        Name = name;
        Artist = artist;
        Album = album;
    }
}
